--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
     display:flex;
     flex-direction: column;
+    align-items: center;
     background-color: rgb(228, 223, 217);
     margin-top: 20px;
 }
